src/objects/Marketing_Activities__c.object
<CustomObject>
    <description>An object created to manage marketing activities recorded on customer and prospect Contacts in Eloqua.</description>
    <fields>
        <fullName>Activity_type__c</fullName>
        <description>Shows what type of activity the customer or lead has completed</description>
        <label>Activity type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visiting the website</fullName>
                </value>
                <value>
                    <fullName>Clicking an Eloqua email</fullName>
                </value>
                <value>
                    <fullName>Form Submit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup related Contact</description>
        <inlineHelpText>Lookup related Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Activities</relationshipLabel>
        <relationshipName>Marketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related lead</description>
        <inlineHelpText>Lookup to related lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marketing Activities</relationshipLabel>
        <relationshipName>Marketing_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Marketing Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_associated_contact</fullName>
        <active>true</active>
        <description>Restrict creation of Marketing Activity if no associated contact exists</description>
        <errorConditionFormula>Contact__c  = null</errorConditionFormula>
        <errorMessage>You must associate with a Contact</errorMessage>
    </validationRules>
</CustomObject>